# darrian-budget

./: .bandit  .clinerules  .gitignore  .pre-commit-config.yaml  .pylintrc  AI_CAREER_INTEL.md  AI_EFFICIENCY_GUIDE.md  AI_TIPS_FROM_YOUTUBE.md  AUDIO_SETUP_GUIDE.md  AURA_HARDWARE_GUIDE.md  AUTONOMOUS_AI_DEV_SYSTEM.md  AUTONOMY_GYM_2H_RUNBOOK.md  AUTONOMY_OPERATIONS_RUNBOOK.md  BACKLOG.md  BRANCH_PROTECTION_SETUP.md  BRD_404_OVERNIGHT_BOT_MODERNIZATION_2026Q2.md  BRD_757_ICE_CO.md  BRD_AI_ETHICS_TEMPLATE.md  BRD_AI_PHOTO_VIDEO_EDITOR.md  BRD_AUTONOMY_GYM_2H_SPRINT_2026Q2.md  BRD_B2B_GROWTH_PIPELINE_2026Q2.md  BRD_C2C_REFERRAL_MARKETPLACE_FLYWHEEL_2026Q2.md  BRD_CC_DB_EXEC_FIX_AGENT_PLAN_2026Q2.md  BRD_CC_FULL_PIPELINE_TEST_LIVE_LINKS_2026Q2.md  BRD_CC_LANDING_PAGE_LINK_FIX_2026Q2.md  BRD_CONSULTING_AI_READINESS_AUDIT_2026Q2.md  BRD_HOMELAB_SDLC_AUTONOMY_OPTIMIZATION_2026Q2.md  BRD_PSS_SOLEOPS_SDLC_TEST_SPRINT_2026Q2.md  BUGFIX_PATTERNS.md  CC_SPEED_TO_LEAD_IMPLEMENTATION.md  CC_SPEED_TO_LEAD_PATCH.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLINE_CLI_GUIDE.md  COMEBACK_POSTS_MARCH2026.md  COMMUNITY_SOVEREIGNTY.md  DEPENDENCY_LOCKING.md  Dockerfile  FB_POST.txt  GEAR_RECOMMENDATIONS.md  (+111 more)
.claude/: LEARNING_BOT_QUICKSTART.md  LEARNING_PATH_2026.md  LEARNING_REFERENCE.md  README.md  settings.json
.github/: pull_request_template.md
.streamlit/: config.toml
agent_dashboard/: app.py
agents/: content_idea_bot.py  soleops_design_agent.py
aura/: Dockerfile  docker-compose.yml  jarvis.py  requirements.txt  server.py  test_compression.py
bot/: TRADING_BOT_SETUP.md  trading_bot.py  trading_bot.service  trading_bot.timer
config/: work_tab_groups.json
context/: AI_CAREER_INTELLIGENCE.md  DARRIAN_MENTAL_HEALTH_OS.md  DARRIAN_VALUES_LAYER.md  OVERNIGHT_ORCHESTRATOR_AGENT.md
immich/: IMMICH_SETUP.md  docker-compose.yml
monitoring/: .env.example  CC_SLA_MONITOR_DEPLOYMENT.md  (+6 more)
(+447 files in other folders)
